--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -29,36 +29,44 @@
                         <h3>Deliver my taco to:</h3>
                         <label for="deliveryName">Name: </label>
                         <input type="text" th:field="*{deliveryName}">
+                        <span class="validationError" th:if="${#fields.hasErrors('deliveryName')}" th:errors="*{deliveryName}">Delivery name error</span>
                         </br>
 
                         <label for="deliveryStreet">Street: </label>
                         <input type="text" th:field="*{deliveryStreet}">
+                        <span class="validationError" th:if="${#fields.hasErrors('deliveryStreet')}" th:errors="*{deliveryStreet}">Street error</span>
                         </br>
 
                         <label for="deliveryCity">City: </label>
                         <input type="text" th:field="*{deliveryCity}">
+                        <span class="validationError" th:if="${#fields.hasErrors('deliveryCity')}" th:errors="*{deliveryCity}">City error</span>
                         </br>
 
                         <label for="deliveryState">State: </label>
                         <input type="text" th:field="*{deliveryState}">
+                        <span class="validationError" th:if="${#fields.hasErrors('deliveryState')}" th:errors="*{deliveryState}">State error</span>
                         </br>
 
                         <label for="deliveryZip">Zip: </label>
                         <input type="text" th:field="*{deliveryZip}">
+                        <span class="validationError" th:if="${#fields.hasErrors('deliveryZip')}" th:errors="*{deliveryZip}">Zip error</span>
                         </br>
 
                         
                         <h3>Choose your payment method</h3>
                         <label for="ccNumber">Credit card number: </label>
                         <input type="text" th:field="*{ccNumber}">
+                        <span class="validationError" th:if="${#fields.hasErrors('ccNumber')}" th:errors="*{ccNumber}">Zip error</span>
                         </br>
 
                         <label for="ccExpiration">Expiration: </label>
                         <input type="text" th:field="*{ccExpiration}">
+                        <span class="validationError" th:if="${#fields.hasErrors('ccExpiration')}" th:errors="*{ccExpiration}">Expiration error</span>
                         </br>
 
                         <label for="ccCVV">Credit card CVV: </label>
                         <input type="text" th:field="*{ccCVV}">
+                        <span class="validationError" th:if="${#fields.hasErrors('ccCVV')}" th:errors="*{ccCVV}">CVV error</span>
                         </br>
                         
                         <input type="submit" value="Submit Order">
